--- a/Pages/Clientes/Create.cshtml
+++ b/Pages/Clientes/Create.cshtml
@@ -38,7 +38,7 @@
                 <span asp-validation-for="Cliente.DataCriacao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Novo" class="btn btn-primary" />
+                <input type="submit" value="Confirmar" class="btn btn-primary" />
             </div>
         </form>
     </div>
